Improve fijiPopulate logic, and split out fijiTest
This commit fixes some issues with fijiPopulate's JAR population:

* Do not copy test-scope JAR files into the Fiji installation.
* Classify more native JARs correctly.
* Populate macos-arm64 native JARs.
* Avoid JPMS issue with humble-video native JARs.

It also updates the Fiji launch logic to use the current Java-side
launch code in org.scijava:app-launcher, rather than the retired
imagej-launcher that is no longer part of the Fiji distribution.

Now the constructed Fiji installation in build/fiji/Fiji can be tested
as its own task, rather than it only being accessible via fijiPopulate.